Update .po files

--- a/l10n/po/ja_JP/_guides/gradle-tooling.adoc.po
+++ b/l10n/po/ja_JP/_guides/gradle-tooling.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-07-07 08:10+0000\n"
+"POT-Creation-Date: 2021-07-22 09:11+0000\n"
 "PO-Revision-Date: 2021-07-20 15:55+0900\n"
 "Last-Translator: Nobuhiro Sue <nobuhiro.sue@gmail.com>\n"
 "Language-Team: \n"
@@ -337,7 +337,9 @@ msgstr "開発モード"
 
 #. type: Plain text
 #: upstream/_guides/gradle-tooling.adoc:168
-msgid "Quarkus comes with a built-in development mode. The best way to run this is via the link:cli-tooling.adoc[Quarkus CLI] Run your application with:"
+#, fuzzy
+#| msgid "Quarkus comes with a built-in development mode. The best way to run this is via the link:cli-tooling.adoc[Quarkus CLI] Run your application with:"
+msgid "Quarkus comes with a built-in development mode. The best way to run this is via the link:cli-tooling[Quarkus CLI] Run your application with:"
 msgstr "Quarkusには開発モードが組み込まれています。実行するベストな方法は link:cli-tooling.adoc[Quarkus CLI] です。以下でアプリケーションを実行します。"
 
 #. type: delimited block -
