--- a/l10n/po/ja_JP/_guides/openapi-swaggerui.adoc.po
+++ b/l10n/po/ja_JP/_guides/openapi-swaggerui.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-06-30 15:11+0000\n"
+"POT-Creation-Date: 2021-07-22 09:11+0000\n"
 "PO-Revision-Date: 2021-04-14 17:16+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -346,7 +346,9 @@ msgstr "OpenAPI仕様を公開"
 
 #. type: Plain text
 #: upstream/_guides/openapi-swaggerui.adoc:180
-msgid "Quarkus provides the https://github.com/smallrye/smallrye-open-api/[Smallrye OpenAPI] extension compliant with the https://github.com/eclipse/microprofile-open-api/[MicroProfile OpenAPI] specification in order to generate your API https://github.com/OAI/OpenAPI-Specification/blob/master/versions/3.0.0.md[OpenAPI v3 specification]."
+#, fuzzy
+#| msgid "Quarkus provides the https://github.com/smallrye/smallrye-open-api/[Smallrye OpenAPI] extension compliant with the https://github.com/eclipse/microprofile-open-api/[MicroProfile OpenAPI] specification in order to generate your API https://github.com/OAI/OpenAPI-Specification/blob/master/versions/3.0.0.md[OpenAPI v3 specification]."
+msgid "Quarkus provides the https://github.com/smallrye/smallrye-open-api/[Smallrye OpenAPI] extension compliant with the https://github.com/eclipse/microprofile-open-api/[MicroProfile OpenAPI] specification in order to generate your API https://github.com/OAI/OpenAPI-Specification/blob/main/versions/3.0.0.md[OpenAPI v3 specification]."
 msgstr "Quarkusは、API link:https://github.com/OAI/OpenAPI-Specification/blob/master/versions/3.0.0.md[OpenAPI v3仕様] を生成するために、 link:https://github.com/eclipse/microprofile-open-api/[Eclipse MicroProfile OpenAPI] 仕様に準拠した `smallrye-openapi` エクステンションを提供しています。"
 
 #. type: Plain text
