--- a/l10n/po/ja_JP/_guides/rest-client-reactive.adoc.po
+++ b/l10n/po/ja_JP/_guides/rest-client-reactive.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-06-30 15:11+0000\n"
+"POT-Creation-Date: 2021-07-22 09:11+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -34,7 +34,7 @@ msgstr "このガイドでは、REST APIと対話するためにREST Client Reac
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:15
 #, fuzzy
-msgid "If your application uses a client and exposes REST endpoints, please use link:resteasy-reactive.adoc[RESTEasy Reactive] for the server part."
+msgid "If your application uses a client and exposes REST endpoints, please use link:resteasy-reactive[RESTEasy Reactive] for the server part."
 msgstr "クライアントを使用し、RESTエンドポイントを公開するアプリケーションの場合は、サーバー部分に link:resteasy-reactive.adoc[RESTEasy Reactive]をご利用ください。"
 
 #. type: Title ==
@@ -1055,7 +1055,7 @@ msgstr "テストにモックHTTPサーバーを使用する"
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:627
 #, fuzzy
-msgid "For tests, you can easily mock the HTTP server with Wiremock.  The link:rest-client.adoc#using-a-mock-http-server-for-tests[Wiremock section of the Quarkus - Using the REST Client] describes how to set it up in detail."
+msgid "For tests, you can easily mock the HTTP server with Wiremock.  The link:rest-client#using-a-mock-http-server-for-tests[Wiremock section of the Quarkus - Using the REST Client] describes how to set it up in detail."
 msgstr "テストのために、Wiremockを使って簡単にHTTPサーバーをモックアップすることができます。設定方法は、「 link:rest-client.adoc#using-a-mock-http-server-for-tests[Quarkus - Using the REST Client」のWiremockの項]で詳しく説明しています。"
 
 #. type: Title ==
