--- a/l10n/po/ja_JP/_guides/grpc.adoc.po
+++ b/l10n/po/ja_JP/_guides/grpc.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-03-30 14:04+0000\n"
+"POT-Creation-Date: 2021-07-22 09:11+0000\n"
 "PO-Revision-Date: 2021-03-06 23:20+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -68,15 +68,21 @@ msgstr "Quarkus gRPCは link:https://vertx.io/docs/vertx-grpc/java/[Vert.x gRPC]
 
 #. type: Plain text
 #: upstream/_guides/grpc.adoc:28
-msgid "link:./grpc-getting-started.adoc[Getting Started]"
+#, fuzzy
+#| msgid "link:./grpc-getting-started.adoc[Getting Started]"
+msgid "link:grpc-getting-started[Getting Started]"
 msgstr "link:./grpc-getting-started.adoc[はじめに]"
 
 #. type: Plain text
 #: upstream/_guides/grpc.adoc:29
-msgid "link:./grpc-service-implementation.adoc[Implementing a gRPC Service]"
+#, fuzzy
+#| msgid "link:./grpc-service-implementation.adoc[Implementing a gRPC Service]"
+msgid "link:grpc-service-implementation[Implementing a gRPC Service]"
 msgstr "link:./grpc-service-implementation.adoc[gRPCサービスの実装]"
 
 #. type: Plain text
 #: upstream/_guides/grpc.adoc:29
-msgid "link:./grpc-service-consumption.adoc[Consuming a gRPC Service]"
+#, fuzzy
+#| msgid "link:./grpc-service-consumption.adoc[Consuming a gRPC Service]"
+msgid "link:grpc-service-consumption[Consuming a gRPC Service]"
 msgstr "link:./grpc-service-consumption.adoc[gRPC サービスの利用]"
