--- a/l10n/po/ja_JP/_guides/kafka-schema-registry-avro.adoc.po
+++ b/l10n/po/ja_JP/_guides/kafka-schema-registry-avro.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-06-30 15:12+0000\n"
+"POT-Creation-Date: 2021-07-22 09:11+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -34,7 +34,7 @@ msgstr "このガイドでは、Quarkusアプリケーションが、Apache Kafk
 #. type: Plain text
 #: upstream/_guides/kafka-schema-registry-avro.adoc:15
 #, fuzzy
-msgid "If you are not familiar with Kafka and Kafka in Quarkus in particular, consider first going through the link:kafka.adoc[Using Apache Kafka with Reactive Messaging] guide."
+msgid "If you are not familiar with Kafka and Kafka in Quarkus in particular, consider first going through the link:kafka[Using Apache Kafka with Reactive Messaging] guide."
 msgstr "KafkaやKafka in Quarkusに慣れていない場合は、まず link:kafka.adoc[「Using Apache Kafka with Reactive Messaging]」のガイドをご覧ください。"
 
 #. type: Title ==
@@ -970,7 +970,7 @@ msgstr "マニュアル設定"
 #. type: Plain text
 #: upstream/_guides/kafka-schema-registry-avro.adoc:534
 #, fuzzy
-msgid "If we couldn't use Dev Services and wanted to start a Kafka broker and Apicurio Registry instance manually, we would define a link:getting-started-testing.adoc#quarkus-test-resource[QuarkusTestResourceLifecycleManager]."
+msgid "If we couldn't use Dev Services and wanted to start a Kafka broker and Apicurio Registry instance manually, we would define a link:getting-started-testing#quarkus-test-resource[QuarkusTestResourceLifecycleManager]."
 msgstr "Dev Servicesを使用できず、KafkaブローカーとApicurioレジストリのインスタンスを手動で起動したい場合は、 link:getting-started-testing.adoc#quarkus-test-resource[QuarkusTestResourceLifecycleManager]を定義します。"
 
 #. type: delimited block -
