Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-smallrye-reactivemessaging-kafka.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-smallrye-reactivemessaging-kafka.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:36+0000\n"
+"POT-Creation-Date: 2021-07-24 02:17+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -53,12 +53,31 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-smallrye-reactivemessaging-kafka.adoc:17
+#: upstream/_generated-config/main/config/quarkus-smallrye-reactivemessaging-kafka.adoc:26
 #, no-wrap
 msgid "boolean"
 msgstr "boolean"
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-smallrye-reactivemessaging-kafka.adoc:19
+#: upstream/_generated-config/main/config/quarkus-smallrye-reactivemessaging-kafka.adoc:20
 #, no-wrap
 msgid "`true`"
 msgstr "`true`"
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-smallrye-reactivemessaging-kafka.adoc:25
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-smallrye-reactivemessaging-kafka_quarkus.reactive-messaging.kafka.enable-graceful-shutdown-in-dev-and-test-mode]]`link:#quarkus-smallrye-reactivemessaging-kafka_quarkus.reactive-messaging.kafka.enable-graceful-shutdown-in-dev-and-test-mode[quarkus.reactive-messaging.kafka.enable-graceful-shutdown-in-dev-and-test-mode]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-smallrye-reactivemessaging-kafka.adoc:28
+#, no-wrap
+msgid "`false`"
+msgstr ""
