--- a/l10n/po/ja_JP/_versions/main/guides/scheduler-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/scheduler-reference.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-23 02:19+0000\n"
+"POT-Creation-Date: 2021-07-24 02:21+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -104,7 +104,7 @@ msgstr "CRON 式で使用される構文は `quarkus.scheduler.cron-type` プロ
 
 #. type: Plain text
 #: upstream/_versions/main/guides/scheduler-reference.adoc:59
-msgid "The `cron` attribute supports <<config-reference#using_property_expressions,Property Expressions>> including default values and nested Property Expressions. (Note that \"{property.path}\" style expressions are still supported but don't offer the full functionality of Property Expressions.)"
+msgid "The `cron` attribute supports <<config-reference#property_expressions,Property Expressions>> including default values and nested Property Expressions. (Note that \"{property.path}\" style expressions are still supported but don't offer the full functionality of Property Expressions.)"
 msgstr ""
 
 #. type: Block title
@@ -189,7 +189,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/scheduler-reference.adoc:103
-msgid "The `every` attribute supports <<config-reference#using_property_expressions,Property Expressions>> including default values and nested Property Expressions. (Note that `\"{property.path}\"` style expressions are still supported but don't offer the full functionality of Property Expressions.)"
+msgid "The `every` attribute supports <<config-reference#property_expressions,Property Expressions>> including default values and nested Property Expressions. (Note that `\"{property.path}\"` style expressions are still supported but don't offer the full functionality of Property Expressions.)"
 msgstr ""
 
 #. type: Block title
@@ -253,7 +253,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/scheduler-reference.adoc:137
-msgid "The `identity` attribute supports <<config-reference#using_property_expressions,Property Expressions>> including default values and nested Property Expressions. (Note that `\"{property.path}\"` style expressions are still supported but don't offer the full functionality of Property Expressions.)"
+msgid "The `identity` attribute supports <<config-reference#property_expressions,Property Expressions>> including default values and nested Property Expressions. (Note that `\"{property.path}\"` style expressions are still supported but don't offer the full functionality of Property Expressions.)"
 msgstr ""
 
 #. type: delimited block -
@@ -319,7 +319,7 @@ msgstr "`@Scheduled#delay()` がゼロよりも大きい値に設定されてい
 
 #. type: Plain text
 #: upstream/_versions/main/guides/scheduler-reference.adoc:176
-msgid "The main advantage over `@Scheduled#delay()` is that the value is configurable.  The `delay` attribute supports <<config-reference#using_property_expressions,Property Expressions>> including default values and nested Property Expressions. (Note that `\"{property.path}\"` style expressions are still supported but don't offer the full functionality of Property Expressions.)"
+msgid "The main advantage over `@Scheduled#delay()` is that the value is configurable.  The `delay` attribute supports <<config-reference#property_expressions,Property Expressions>> including default values and nested Property Expressions. (Note that `\"{property.path}\"` style expressions are still supported but don't offer the full functionality of Property Expressions.)"
 msgstr ""
 
 #. type: delimited block -
