Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-rest-client-reactive-rest-client-reactive-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-rest-client-reactive-rest-client-reactive-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:36+0000\n"
+"POT-Creation-Date: 2021-07-27 02:18+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -77,12 +77,31 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-rest-client-reactive-rest-client-reactive-config.adoc:26
+#: upstream/_generated-config/main/config/quarkus-rest-client-reactive-rest-client-reactive-config.adoc:35
 #, no-wrap
 msgid "boolean"
 msgstr "boolean"
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-rest-client-reactive-rest-client-reactive-config.adoc:28
+#: upstream/_generated-config/main/config/quarkus-rest-client-reactive-rest-client-reactive-config.adoc:29
 #, no-wrap
 msgid "`false`"
 msgstr "`false`"
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-rest-client-reactive-rest-client-reactive-config.adoc:34
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-rest-client-reactive-rest-client-reactive-config_quarkus.rest-client-reactive.provider-autodiscovery]]`link:#quarkus-rest-client-reactive-rest-client-reactive-config_quarkus.rest-client-reactive.provider-autodiscovery[quarkus.rest-client-reactive.provider-autodiscovery]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Whether or not providers (filters, etc) annotated with `javax.ws.rs.ext.Provider` should be automatically registered for all the clients in the application.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-rest-client-reactive-rest-client-reactive-config.adoc:37
+#, no-wrap
+msgid "`true`"
+msgstr ""
