--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-resteasy.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-resteasy.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:37+0000\n"
+"POT-Creation-Date: 2021-07-27 02:18+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -61,7 +61,7 @@ msgstr "boolean"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-resteasy.adoc:20
-#: upstream/_generated-config/main/config/quarkus-resteasy.adoc:56
+#: upstream/_generated-config/main/config/quarkus-resteasy.adoc:57
 #, no-wrap
 msgid "`false`"
 msgstr "`false`"
@@ -145,13 +145,31 @@ msgid ""
 "--"
 msgstr ""
 
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-resteasy.adoc:62
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-resteasy_quarkus.security.jaxrs.default-roles-allowed]]`link:#quarkus-resteasy_quarkus.security.jaxrs.default-roles-allowed[quarkus.security.jaxrs.default-roles-allowed]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"If no security annotations are affecting a method then they will default to requiring these roles, (equivalent to adding an @RolesAllowed annotation with the roles to every endpoint class). The role of '++**++' means any authenticated user, which is equivalent to the `io.quarkus.security.Authenticated` annotation.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-resteasy.adoc:63
+#, no-wrap
+msgid "list of string"
+msgstr ""
+
 #. type: Block title
-#: upstream/_generated-config/main/config/quarkus-resteasy.adoc:59
+#: upstream/_generated-config/main/config/quarkus-resteasy.adoc:68
 #, no-wrap
 msgid "About the MemorySize format"
 msgstr ""
 
 #. type: delimited block =
-#: upstream/_generated-config/main/config/quarkus-resteasy.adoc:63
+#: upstream/_generated-config/main/config/quarkus-resteasy.adoc:72
 msgid "A size configuration option recognises string in this format (shown as a regular expression): `[0-9]+[KkMmGgTtPpEeZzYy]?`.  If no suffix is given, assume bytes."
 msgstr ""
