--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-resteasy-reactive.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-resteasy-reactive.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:37+0000\n"
+"POT-Creation-Date: 2021-07-27 02:19+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -120,27 +120,45 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-resteasy-reactive.adoc:52
 #, no-wrap
 msgid ""
-"icon:lock[title=Fixed at build time] [[quarkus-resteasy-reactive_quarkus.resteasy-reactive.deny-unannotated-endpoints]]`link:#quarkus-resteasy-reactive_quarkus.resteasy-reactive.deny-unannotated-endpoints[quarkus.resteasy-reactive.deny-unannotated-endpoints]`\n"
+"icon:lock[title=Fixed at build time] [[quarkus-resteasy-reactive_quarkus.security.jaxrs.deny-unannotated-endpoints]]`link:#quarkus-resteasy-reactive_quarkus.security.jaxrs.deny-unannotated-endpoints[quarkus.security.jaxrs.deny-unannotated-endpoints]`\n"
 "\n"
 "[.description]\n"
 "--\n"
-"If set to true, access to all JAX-RS resources will be denied by default\n"
+"if set to true, access to all JAX-RS resources will be denied by default\n"
 "--"
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-resteasy-reactive.adoc:55
+#: upstream/_generated-config/main/config/quarkus-resteasy-reactive.adoc:56
 #, no-wrap
 msgid "`false`"
 msgstr "`false`"
 
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-resteasy-reactive.adoc:61
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-resteasy-reactive_quarkus.security.jaxrs.default-roles-allowed]]`link:#quarkus-resteasy-reactive_quarkus.security.jaxrs.default-roles-allowed[quarkus.security.jaxrs.default-roles-allowed]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"If no security annotations are affecting a method then they will default to requiring these roles, (equivalent to adding an @RolesAllowed annotation with the roles to every endpoint class). The role of '++**++' means any authenticated user, which is equivalent to the `io.quarkus.security.Authenticated` annotation.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-resteasy-reactive.adoc:62
+#, no-wrap
+msgid "list of string"
+msgstr ""
+
 #. type: Block title
-#: upstream/_generated-config/main/config/quarkus-resteasy-reactive.adoc:58
+#: upstream/_generated-config/main/config/quarkus-resteasy-reactive.adoc:67
 #, no-wrap
 msgid "About the MemorySize format"
 msgstr ""
 
 #. type: delimited block =
-#: upstream/_generated-config/main/config/quarkus-resteasy-reactive.adoc:62
+#: upstream/_generated-config/main/config/quarkus-resteasy-reactive.adoc:71
 msgid "A size configuration option recognises string in this format (shown as a regular expression): `[0-9]+[KkMmGgTtPpEeZzYy]?`.  If no suffix is given, assume bytes."
 msgstr ""
