--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-smallrye-graphql.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-smallrye-graphql.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-06-04 02:54+0000\n"
+"POT-Creation-Date: 2021-07-27 02:18+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -29,14 +29,14 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:9
-#: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:131
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:203
 #, no-wrap
 msgid "Type"
 msgstr "タイプ"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:11
-#: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:133
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:205
 #, no-wrap
 msgid "Default"
 msgstr "デフォルト"
@@ -56,7 +56,8 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:17
 #: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:116
-#: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:139
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:179
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:211
 #, no-wrap
 msgid "string"
 msgstr "string"
@@ -87,7 +88,12 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:62
 #: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:71
 #: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:125
-#: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:148
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:134
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:143
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:152
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:161
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:197
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:220
 #, no-wrap
 msgid "boolean"
 msgstr "boolean"
@@ -130,7 +136,12 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:56
-#: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:150
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:128
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:137
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:146
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:155
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:164
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:222
 #, no-wrap
 msgid "`false`"
 msgstr "`false`"
@@ -179,6 +190,7 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:83
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:182
 #, no-wrap
 msgid "`default`"
 msgstr ""
@@ -199,6 +211,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:89
 #: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:98
 #: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:107
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:188
 #, fuzzy, no-wrap
 #| msgid "string"
 msgid "list of string"
@@ -244,6 +257,114 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:124
 #, no-wrap
 msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus.smallrye-graphql.print-data-fetcher-exception]]`link:#quarkus-smallrye-graphql_quarkus.smallrye-graphql.print-data-fetcher-exception[quarkus.smallrye-graphql.print-data-fetcher-exception]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Print the data fetcher exception to the log file.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:133
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus.smallrye-graphql.schema-include-scalars]]`link:#quarkus-smallrye-graphql_quarkus.smallrye-graphql.schema-include-scalars[quarkus.smallrye-graphql.schema-include-scalars]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Include the Scalar definitions in the schema.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:142
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus.smallrye-graphql.schema-include-schema-definition]]`link:#quarkus-smallrye-graphql_quarkus.smallrye-graphql.schema-include-schema-definition[quarkus.smallrye-graphql.schema-include-schema-definition]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Include the schema internal definition in the schema.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:151
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus.smallrye-graphql.schema-include-directives]]`link:#quarkus-smallrye-graphql_quarkus.smallrye-graphql.schema-include-directives[quarkus.smallrye-graphql.schema-include-directives]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Include Directives in the schema.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:160
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus.smallrye-graphql.schema-include-introspection-types]]`link:#quarkus-smallrye-graphql_quarkus.smallrye-graphql.schema-include-introspection-types[quarkus.smallrye-graphql.schema-include-introspection-types]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Include Introspection Types in the schema.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:169
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus.smallrye-graphql.log-payload]]`link:#quarkus-smallrye-graphql_quarkus.smallrye-graphql.log-payload[quarkus.smallrye-graphql.log-payload]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Log the payload (and optionally variables) to System out.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:170
+#, no-wrap
+msgid "`off`, `query-only`, `query-and-variables`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:173
+#, no-wrap
+msgid "`off`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:178
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus.smallrye-graphql.field-visibility]]`link:#quarkus-smallrye-graphql_quarkus.smallrye-graphql.field-visibility[quarkus.smallrye-graphql.field-visibility]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Set the Field visibility.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:187
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus.smallrye-graphql.unwrap-exceptions]]`link:#quarkus-smallrye-graphql_quarkus.smallrye-graphql.unwrap-exceptions[quarkus.smallrye-graphql.unwrap-exceptions]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Exceptions that should be unwrapped (class names).\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:196
+#, no-wrap
+msgid ""
 "[[quarkus-smallrye-graphql_quarkus.smallrye-graphql.ui.enable]]`link:#quarkus-smallrye-graphql_quarkus.smallrye-graphql.ui.enable[quarkus.smallrye-graphql.ui.enable]`\n"
 "\n"
 "[.description]\n"
@@ -253,19 +374,19 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:128
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:200
 #, no-wrap
 msgid "`true`"
 msgstr "`true`"
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:130
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:202
 #, no-wrap
 msgid "[[quarkus-smallrye-graphql_quarkus.smallrye-graphql.ui-smallrye-graphql-ui-configuration]]link:#quarkus-smallrye-graphql_quarkus.smallrye-graphql.ui-smallrye-graphql-ui-configuration[SmallRye GraphQL UI configuration]"
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:138
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:210
 #, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus.smallrye-graphql.ui.root-path]]`link:#quarkus-smallrye-graphql_quarkus.smallrye-graphql.ui.root-path[quarkus.smallrye-graphql.ui.root-path]`\n"
@@ -277,13 +398,13 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:142
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:214
 #, no-wrap
 msgid "`graphql-ui`"
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:147
+#: upstream/_generated-config/main/config/quarkus-smallrye-graphql.adoc:219
 #, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-smallrye-graphql_quarkus.smallrye-graphql.ui.always-include]]`link:#quarkus-smallrye-graphql_quarkus.smallrye-graphql.ui.always-include[quarkus.smallrye-graphql.ui.always-include]`\n"
