--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-kafka-kafka-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-kafka-kafka-build-time-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-06-18 02:25+0000\n"
+"POT-Creation-Date: 2021-07-28 02:17+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -171,7 +171,69 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-kafka-kafka-build-time-config.adoc:79
+#: upstream/_generated-config/main/config/quarkus-kafka-kafka-build-time-config.adoc:80
 #, no-wrap
 msgid "`kafka`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-kafka-kafka-build-time-config.adoc:86
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-kafka-kafka-build-time-config_quarkus.kafka.devservices.topic-partitions-timeout]]`link:#quarkus-kafka-kafka-build-time-config_quarkus.kafka.devservices.topic-partitions-timeout[quarkus.kafka.devservices.topic-partitions-timeout]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Timeout for admin client calls used in topic creation. \n"
+" Defaults to 2 seconds.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-kafka-kafka-build-time-config.adoc:88
+#, no-wrap
+msgid ""
+"link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]\n"
+"  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-kafka-kafka-build-time-config.adoc:91
+#, no-wrap
+msgid "`2S`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-kafka-kafka-build-time-config.adoc:97
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-kafka-kafka-build-time-config_quarkus.kafka.devservices.topic-partitions-topic-partitions]]`link:#quarkus-kafka-kafka-build-time-config_quarkus.kafka.devservices.topic-partitions-topic-partitions[quarkus.kafka.devservices.topic-partitions]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The topic-partition pairs to create in the Dev Services Kafka broker. After the broker is started, given topics with partitions are created, skipping already existing topics. For example, `quarkus.kafka.devservices.topic-partitions.test=2` will create a topic named `test` with 2 partitions. \n"
+" The topic creation will not try to re-partition existing topics with different number of partitions.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-kafka-kafka-build-time-config.adoc:98
+#, no-wrap
+msgid "`Map<String,Integer>`"
+msgstr ""
+
+#. type: Block title
+#: upstream/_generated-config/main/config/quarkus-kafka-kafka-build-time-config.adoc:104
+#, no-wrap
+msgid "About the Duration format"
+msgstr ""
+
+#. type: delimited block =
+#: upstream/_generated-config/main/config/quarkus-kafka-kafka-build-time-config.adoc:108
+msgid "The format for durations uses the standard `java.time.Duration` format.  You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc]."
+msgstr ""
+
+#. type: delimited block =
+#: upstream/_generated-config/main/config/quarkus-kafka-kafka-build-time-config.adoc:112
+msgid "You can also provide duration values starting with a number.  In this case, if the value consists only of a number, the converter treats the value as seconds.  Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format."
 msgstr ""
