Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/kubernetes-client.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/kubernetes-client.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-23 02:19+0000\n"
+"POT-Creation-Date: 2021-07-29 02:22+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -623,12 +623,35 @@ msgid ""
 msgstr ""
 
 #. type: Plain text
-#: upstream/_versions/main/guides/kubernetes-client.adoc:388
+#: upstream/_versions/main/guides/kubernetes-client.adoc:389
+msgid "Or by using the `@WithOpenShiftTestServer` similar to the `@WithKubernetesTestServer` explained in the previous section:"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/kubernetes-client.adoc:395
+#, no-wrap
+msgid ""
+"@WithOpenShiftTestServer\n"
+"@QuarkusTest\n"
+"public class OpenShiftClientTest {\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/kubernetes-client.adoc:399
+#, no-wrap
+msgid ""
+"    @OpenShiftTestServer\n"
+"    private OpenShiftServer mockOpenShiftServer;\n"
+"...\n"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/kubernetes-client.adoc:402
 msgid "To use this feature, you have to add a dependency on `quarkus-test-openshift-client`:"
 msgstr "この機能を使用するには、 `quarkus-test-openshift-client` に依存関係を追加する必要があります。"
 
 #. type: delimited block -
-#: upstream/_versions/main/guides/kubernetes-client.adoc:396
+#: upstream/_versions/main/guides/kubernetes-client.adoc:410
 #, no-wrap
 msgid ""
 "<dependency>\n"
@@ -639,7 +662,7 @@ msgid ""
 msgstr ""
 
 #. type: Title ==
-#: upstream/_versions/main/guides/kubernetes-client.adoc:398
+#: upstream/_versions/main/guides/kubernetes-client.adoc:412
 #, no-wrap
 msgid "Configuration Reference"
 msgstr "設定リファレンス"
