--- a/l10n/stats/translation.csv
+++ b/l10n/stats/translation.csv
@@ -1,4 +1,5 @@
 Filename, Fuzzy Messages, Total Messages, Fuzzy Words, Total Words, Achievement
+l10n/po/ja_JP/_posts/2021-07-30-quarkus-2x-platform-quarkiverse-registry.adoc.po, 0, 41, 0, 1011 ,100%
 l10n/po/ja_JP/_posts/2021-07-29-quarkus-2-1-0-final-released.adoc.po, 0, 26, 0, 431 ,100%
 l10n/po/ja_JP/_posts/2021-07-16-quarkus-newsletter-10.adoc.po, 0, 6, 0, 175 ,100%
 l10n/po/ja_JP/_posts/2021-07-13-quarkus-2-0-2-final-released.adoc.po, 0, 14, 0, 155 ,100%
