Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/consul-config.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/consul-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-23 02:19+0000\n"
+"POT-Creation-Date: 2021-07-30 02:24+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -198,7 +198,7 @@ msgstr ""
 #: upstream/_versions/main/guides/consul-config.adoc:120
 #, no-wrap
 msgid ""
-"@Path(\"/hello\")\n"
+"@Path(\"/greeting\")\n"
 "public class GreetingResource {\n"
 msgstr ""
 
@@ -235,7 +235,7 @@ msgstr ""
 #: upstream/_versions/main/guides/consul-config.adoc:123
 #, no-wrap
 msgid ""
-"    @ConfigProperty(name = \"message\", defaultValue=\"Hello from default\")\n"
+"    @ConfigProperty(name = \"greeting.message\", defaultValue=\"Hello from default\")\n"
 "    String message;\n"
 msgstr ""
 
