--- a/l10n/po/ja_JP/_versions/main/guides/amazon-lambda.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/amazon-lambda.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-23 02:19+0000\n"
+"POT-Creation-Date: 2021-07-30 02:24+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -596,7 +596,7 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_versions/main/guides/amazon-lambda.adoc:326
 #, no-wrap
-msgid "    testimplementation  \"io.quarkus:quarkus-test-amazon-lambda\"\n"
+msgid "    testImplementation  \"io.quarkus:quarkus-test-amazon-lambda\"\n"
 msgstr ""
 
 #. type: delimited block -
