--- a/l10n/po/ja_JP/_versions/main/guides/config-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/config-reference.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-07-23 02:19+0000\n"
+"POT-Creation-Date: 2021-07-30 02:24+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -304,7 +304,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/config-reference.adoc:129
-msgid "It is also possible to create a xref:config-custom.adoc#custom-config-source[Custom Config Source]."
+msgid "It is also possible to create a xref:config-extending-support.adoc#custom-config-source[Custom Config Source]."
 msgstr ""
 
 #. type: Title ==
